// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stories Snapshots Documentazione/Componenti/Alert _ContenutoAggiuntivo 1`] = `
<div>
  <div
    class="alert alert-success fade"
    role="alert"
  >
    <h4
      class="alert-heading"
    >
      Avviso di successo!
    </h4>
    <p>
      Stai leggendo questo importante messaggio di avviso di successo. Questo testo di esempio sarà più a lungo in modo da poter vedere come funzioni la spaziatura all'interno di un avviso con questo tipo di contenuto.
    </p>
    <hr />
    <p
      class="mb-0"
    >
      Quando necessario, assicurarti di inserire le utilità di margine per mantenere gli spazi equilibrati.
    </p>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Alert _EsempiInterattivi 1`] = `
<div>
  <div
    class="alert alert-success fade"
    role="alert"
  >
    Questo è un alert di
    <b>
      success
    </b>
    !
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Alert _LinkEvidenziato 1`] = `
<div>
  <div
    class="alert alert-danger fade"
    role="alert"
  >
    Questo è un alert con un esempio di
    <a
      class="alert-link"
      href="#"
    >
      link
    </a>
    evidenziato.
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Alert ChiusuraControllata 1`] = `
<div>
  <div>
    <div
      class="alert alert-warning alert-dismissible fade"
      role="alert"
    >
      <button
        aria-label="Close"
        class="btn-close"
        type="button"
      />
      <strong>
        Attenzione
      </strong>
      Alcuni campi inseriti sono da controllare.
    </div>
  </div>
</div>
`;
